fixed proj-card-main z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,7 +213,7 @@ h3 {
     background-position: center;
     opacity: 0.7;
     text-decoration: none;
-    z-index: 1;
+    z-index: 0;
 }   
 
 .proj-card-main:hover {
